# Huickathon_S3_29

./: .gitignore  README.md  architecture_minimal.md  design.md  design_minimal.md  package-lock.json  package.json  tailwind.config.js
mock/: index.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/hobbies/: route.ts
src/app/api/random/: route.ts
src/app/pick/: page.tsx
src/app/survey/: page.tsx
src/components/: CategorySection.tsx  HobbyCard.tsx
src/components/report/: BudgetTiers.tsx  Cards.tsx  Checklist.tsx  Citations.tsx  MarkdownBlock.tsx  QA.tsx  SectionRenderer.tsx  Timeline.tsx  VideoRefCard.tsx
src/data/: hobbies.json
src/data/reports/: README.md  badminton.json  bungee.json  camping.json  figure.json  fishing.json  frisbee.json  guitar.json  hiking.json  jubensha.json  perler_beads.json  porcelain.json  pottery.json  second_language.json  silver_smithing.json  ski.json  sneaker.json  stamp.json  tea_gathering.json  video_creation.json  woodworking.json
src/lib/: hobbies.ts  theme.ts  types.ts
tools/report-generator/: .env.example  README.md  build_reports.py  crawl_only.py  diagnose_crawler.py  fill_section_videos.py  generate_reports.py  pyproject.toml  test_douyin.py  tools.py
tools/report-generator/crawlers/: __init__.py  base.py  douyin.py  xhs.py
tools/report-generator/lib/: agent.py  schemas.py  templates.py
tools/report-generator/preview/: guitar.preview.md
tools/report-generator/templates/: collecting.json  crafting.json  outdoor.json  physical.json  skill_growth.json  social_competitive.json
(+2 files in other folders)
