[project]
name = "report-generator"
version = "0.1.0"
description = "三分钟热度 · 离线报告预跑工具（爬虫 + Claude agent）"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "playwright>=1.47.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
